--- a/app/css/main.css
+++ b/app/css/main.css
@@ -275,34 +275,34 @@ body {
     top: 0;
     left: -10%; }
     .card__layer_top {
-      background: url("../img/card/primeryCard/front/front_top.png") no-repeat;
+      background: url("../img/front_top.PNG") no-repeat;
       background-size: 20% auto; }
     .card__layer_center {
-      background: url("../img/card/primeryCard/front/front_center.png") no-repeat;
+      background: url("../img/front_center.PNG") no-repeat;
       background-size: 40% auto;
       top: 33%; }
     .card__layer_bottom {
-      background: url("../img/card/primeryCard/front/front_bottom.png") no-repeat;
+      background: url("../img/front_bottom.PNG") no-repeat;
       background-size: 100% auto;
       top: 42%; }
     .card__layer_bottom-second {
-      background: url("../img/card/secondCard/bottom.svg") no-repeat;
+      background: url("../img/bottom.svg") no-repeat;
       background-size: 100% auto;
       top: 42%; }
     .card__layer_left-third {
-      background: url("../img/card/thirdCard/bottom.svg") no-repeat;
+      background: url("../img/bottom.svg") no-repeat;
       background-size: cover; }
   .card__backlayer_top {
-    background: url("../img/card/primeryCard/back/back_top.png") no-repeat;
+    background: url("../img/back_top.PNG") no-repeat;
     background-size: 100%;
     top: -10%; }
   .card__backlayer_center {
-    background: url("../img/card/primeryCard/back/back_center.png") no-repeat;
+    background: url("../img/back_center.PNG") no-repeat;
     background-size: 40% auto;
     left: 60%;
     top: 30%; }
   .card__backlayer_bottom {
-    background: url("../img/card/primeryCard/back/back_bottom.png") no-repeat;
+    background: url("../img/back_bottom.PNG") no-repeat;
     background-size: 30% auto;
     top: 60%;
     left: 70%; }
