--- a/app/css/main.css
+++ b/app/css/main.css
@@ -275,14 +275,14 @@ body {
     top: 0;
     left: -10%; }
     .card__layer_top {
-      background: url('front_top.PNG') no-repeat;
+      background: url(front_top.PNG) no-repeat;
       background-size: 20% auto; }
     .card__layer_center {
-      background: url('front_center.PNG') no-repeat;
+      background: url(front_center.PNG) no-repeat;
       background-size: 40% auto;
       top: 33%; }
     .card__layer_bottom {
-      background: url('front_bottom.PNG') no-repeat;
+      background: url(front_bottom.PNG) no-repeat;
       background-size: 100% auto;
       top: 42%; }
     .card__layer_bottom-second {
